--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -7,7 +7,7 @@ image: CONTAINER_IMAGE
 # Deploy to these servers.
 servers:
   web:
-    - TARGET_IP_ADDRESS
+    - SERVER_ADDRESS
   # job:
   #   hosts:
   #     - 192.168.0.1
