--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,8 +1,8 @@
 # Name of your application. Used to uniquely configure containers.
-service: SERVICE_NAME
+service: kamal-next
 
 # Name of the container image.
-image: CONTAINER_IMAGE
+image: doma2mo10/kamal-next
 
 # Deploy to these servers.
 servers:
@@ -18,7 +18,7 @@ servers:
 # in Cloudflare's SSL/TLS setting to "Full" to enable end-to-end encryption. 
 proxy: 
   ssl: true
-  host: HOST_NAME
+  host: v160-251-234-214.3kh3.static.cnode.jp
   # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
   # app_port: 3000
 
@@ -26,7 +26,7 @@ proxy:
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: DOCKER_HUB_ACCOUNT_NAME
+  username: doma2mo10
 
   # Always use an access token rather than real password (pulled from .kamal/secrets).
   password:
