--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -20,7 +20,7 @@ proxy:
   ssl: true
   host: v160-251-234-214.3kh3.static.cnode.jp
   # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
-  # app_port: 3000
+  app_port: 3000
 
 # Credentials for your image host.
 registry:
