--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -21,6 +21,10 @@ proxy:
   host: v160-251-234-214.3kh3.static.cnode.jp
   # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
   app_port: 3000
+  healthcheck:
+    interval: 3
+    path: /api/up
+    timeout: 3
 
 # Credentials for your image host.
 registry:
