--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: gem install kamal
 
       - name: Create secrets file
-        run: echo "${{ secrets.KAMAL_REGISTRY_PASSWORD }}" > .kamal/secrets-common
+        run: echo "KAMAL_REGISTRY_PASSWORD=${{ secrets.KAMAL_REGISTRY_PASSWORD }}" > .kamal/secrets-common
 
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.7.0
