--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -18,7 +18,7 @@ servers:
 # in Cloudflare's SSL/TLS setting to "Full" to enable end-to-end encryption. 
 proxy: 
   ssl: true
-  host: v160-251-234-214.3kh3.static.cnode.jp
+  host: ksxqew.com
   # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
   app_port: 3000
   healthcheck:
