--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -16,17 +16,17 @@ servers:
 # Enable SSL auto certification via Let's Encrypt (and allow for multiple apps on one server).
 # If using something like Cloudflare, it is recommended to set encryption mode 
 # in Cloudflare's SSL/TLS setting to "Full" to enable end-to-end encryption. 
-proxy: 
-  ssl: true
-  hosts:
-    - ksxqew.com
-    - stg.ksxqew.com
-  # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
-  app_port: 3000
-  healthcheck:
-    interval: 3
-    path: /api/up
-    timeout: 3
+# proxy: 
+#   ssl: true
+#   hosts:
+#     - ksxqew.com
+#     - stg.ksxqew.com
+#   # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
+#   app_port: 3000
+#   healthcheck:
+#     interval: 3
+#     path: /api/up
+#     timeout: 3
 
 # Credentials for your image host.
 registry:
