--- a/config/deploy.production.yml
+++ b/config/deploy.production.yml
@@ -2,7 +2,7 @@
 service: kamal-next
 
 # Name of the container image.
-image: doma2mo10/kamal-next-staging
+image: doma2mo10/kamal-next
 
 # Deploy to these servers.
 servers:
@@ -18,9 +18,9 @@ servers:
 # in Cloudflare's SSL/TLS setting to "Full" to enable end-to-end encryption. 
 proxy: 
   ssl: true
-  host: stg.ksxqew.com
+  host: ksxqew.com
   # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
-  app_port: 3001
+  app_port: 3000
   healthcheck:
     interval: 3
     path: /api/up
@@ -40,7 +40,7 @@ registry:
 builder:
   arch: amd64
   builder:
-  dockerfile: ./docker/staging/Dockerfile
+  dockerfile: ./docker/production/Dockerfile
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 
